Fix row-gap

--- a/src/components/order/order.scss
+++ b/src/components/order/order.scss
@@ -14,7 +14,7 @@
   &-inner {
     display: grid;
     grid-template-columns: 1fr;
-    grid-row-gap: 60px;
+    grid-row-gap: 30px;
     grid-column-gap: 20px;
 
     @media screen and (min-width: 600px) {
